// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs matches snapshot (global) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: none;
  bottom: -1px;
  color: #1B1C1E;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 82px;
  padding: 0 var(--spacing-2x);
  position: relative;
  z-index: 1;
}

.c1:hover {
  background-color: #DBDEE1;
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:focus {
  z-index: 2;
}

.c1::after {
  background-color: #006296;
  bottom: 0;
  content: '';
  display: block;
  height: 4px;
  left: 0;
  position: absolute;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: none;
  bottom: -1px;
  color: #1B1C1E;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 82px;
  padding: 0 var(--spacing-2x);
  position: relative;
}

.c3:hover {
  background-color: #DBDEE1;
}

.c3:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:focus {
  z-index: 2;
}

.c2 {
  color: #000000;
  font-family: var(--font-family);
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c4 {
  color: #000000;
  font-family: var(--font-family);
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
}

.c5 {
  border: none;
  border-top: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
}

<div>
  <div
    aria-label="tabs label"
    class="c0"
    role="tablist"
  >
    <button
      aria-controls="uuid1"
      aria-selected="true"
      class="c1"
      data-testid="tab-button"
      id="tab-1"
      role="tab"
    >
      <span
        class="c2"
        data-testid="tab-button-text"
      >
        button 1
      </span>
    </button>
    <button
      aria-controls="uuid2"
      aria-selected="false"
      class="c3"
      data-testid="tab-button"
      id="tab-2"
      role="tab"
      tabindex="-1"
    >
      <span
        class="c4"
        data-testid="tab-button-text"
      >
        button 2
      </span>
    </button>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c5"
    id="uuid1"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c5"
    hidden=""
    id="uuid2"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #878f9a;
  bottom: -1px;
  color: #878f9a;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  min-height: var(--size-3halfx);
  min-width: 82px;
  padding: 0 var(--spacing-2x);
  position: relative;
  background-color: #FFFFFF;
  border: 1px solid #878f9a;
  border-bottom: 1px solid transparent;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  color: #1b1c1e;
  z-index: 1;
}

.c1:hover {
  background-color: #DBDEE1;
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:focus {
  z-index: 2;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #878f9a;
  bottom: -1px;
  color: #878f9a;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  min-height: var(--size-3halfx);
  min-width: 82px;
  padding: 0 var(--spacing-2x);
  position: relative;
}

.c3:hover {
  background-color: #DBDEE1;
}

.c3:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:focus {
  z-index: 2;
}

.c2 {
  color: #000000;
  font-family: var(--font-family);
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c4 {
  color: #000000;
  font-family: var(--font-family);
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
}

.c5 {
  border: none;
  border-top: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #878f9a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0 0 var(--spacing-4x);
}

<div>
  <div
    aria-label="tabs label"
    class="c0"
    role="tablist"
  >
    <button
      aria-controls="uuid1"
      aria-selected="true"
      class="c1"
      data-testid="tab-button"
      id="tab-1"
      role="tab"
    >
      <span
        class="c2"
        data-testid="tab-button-text"
      >
        button 1
      </span>
    </button>
    <button
      aria-controls="uuid2"
      aria-selected="false"
      class="c3"
      data-testid="tab-button"
      id="tab-2"
      role="tab"
      tabindex="-1"
    >
      <span
        class="c4"
        data-testid="tab-button-text"
      >
        button 2
      </span>
    </button>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c5"
    id="uuid1"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c5"
    hidden=""
    id="uuid2"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #878f9a;
  bottom: -1px;
  color: #878f9a;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 82px;
  padding: 0 var(--spacing-2x);
  position: relative;
  background-color: #FFFFFF;
  border: 1px solid #878f9a;
  border-bottom: 1px solid transparent;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  color: #1b1c1e;
  z-index: 1;
}

.c1:hover {
  background-color: #DBDEE1;
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1:focus {
  z-index: 2;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #878f9a;
  bottom: -1px;
  color: #878f9a;
  border-radius: var(--border-radius-2x) var(--border-radius-2x) 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 82px;
  padding: 0 var(--spacing-2x);
  position: relative;
}

.c3:hover {
  background-color: #DBDEE1;
}

.c3:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c3:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:focus {
  z-index: 2;
}

.c2 {
  color: #000000;
  font-family: var(--font-family);
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.5rem;
}

.c4 {
  color: #000000;
  font-family: var(--font-family);
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
}

.c5 {
  border: none;
  border-top: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #878f9a;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0 0 var(--spacing-4x);
}

<div>
  <div
    aria-label="tabs label"
    class="c0"
    role="tablist"
  >
    <button
      aria-controls="uuid1"
      aria-selected="true"
      class="c1"
      data-testid="tab-button"
      id="tab-1"
      role="tab"
    >
      <span
        class="c2"
        data-testid="tab-button-text"
      >
        button 1
      </span>
    </button>
    <button
      aria-controls="uuid2"
      aria-selected="false"
      class="c3"
      data-testid="tab-button"
      id="tab-2"
      role="tab"
      tabindex="-1"
    >
      <span
        class="c4"
        data-testid="tab-button-text"
      >
        button 2
      </span>
    </button>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c5"
    id="uuid1"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c5"
    hidden=""
    id="uuid2"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;
